# VoiceAssistant

./: Cargo.toml  Readme.md  build.rs  config.toml  grant_permissions.sh
.cargo/: config.toml
ax-helper/: buildSwift.sh  main.swift
models/: download.sh
src/: config.rs  coordinator.rs  events.rs  main.rs  pipeline.rs
src/ai/: claude.rs  deepseek.rs  gemini.rs  http.rs  mod.rs  ollama.rs  openai.rs
src/context/: macos.rs  mod.rs
src/hotkey/: macos.rs  mod.rs
src/injector/: macos.rs  mod.rs
src/recorder/: cpal_recorder.rs  mod.rs
src/transcriber/: mod.rs  whisper.rs
src/vision/: layout.rs
