[package]
name = "VoiceAssistant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "VoiceAssistant"
path = "src/main.rs"

[dependencies]
cpal              = "0.15"
hound             = "3.5"
ctrlc             = { version = "3.4", features = ["termination"] }
crossbeam-channel = "0.5"
chrono            = "0.4"
whisper-rs        = { version = "0.11" , features = ["metal"] }

rdev = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_os = "macos")'.dependencies]
# objc нужен для NSWorkspace, NSEvent
objc = "0.2"
